# path-to-academia

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  MANIFEST.in  Makefile  README.md  SECURITY.md  install-claude.sh  install.sh  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  research_workflow_gap.yml
.github/workflows/: ci.yml
docs/: agent-native-audit.md  architecture.md  benchmark-audit.md  collection-playbook.md  localization.md  plugin-install.md  privacy.md  quality-gates.md  schema.md  workflow.md
examples/ml-bio/: README.md
examples/ml-bio/audit/: demo_source_note.md
examples/ml-bio/configs/: domain.json
examples/ml-bio/tables/: entities_review_or_excluded.csv
plugins/path-to-academia/: AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
plugins/path-to-academia/.claude-plugin/: plugin.json
plugins/path-to-academia/.codex-plugin/: plugin.json
plugins/path-to-academia/docs/: agent-native-audit.md  architecture.md  collection-playbook.md  quality-gates.md  release-checklist.md  schema.md  sharding.md  workflow.md
plugins/path-to-academia/examples/ml-bio/: README.md
plugins/path-to-academia/examples/ml-bio/configs/: domain.json
plugins/path-to-academia/examples/ml-bio/tables/: entities_final.csv
plugins/path-to-academia/scripts/: export_wrapped_xlsx.py  qa_workspace.py  serve_web.py
plugins/path-to-academia/skills/path-to-academia/: SKILL.md
plugins/path-to-academia/src/path_to_academia/: __init__.py  context.py  csvio.py  quality.py  schemas.py  status.py  web.py  workspace.py  xlsx.py
plugins/path-to-academia/src/path_to_academia/webui/static/: app.js  i18n.json  index.html  styles.css
scripts/: check_release.py  init_workspace.py  workspace_context.py
skills/path-to-academia/: SKILL.md
skills/path-to-academia/agents/: openai.yaml
src/path_to_academia/: __init__.py  cli.py  context.py  schemas.py  workspace.py
src/path_to_academia/data/examples/ml-bio/configs/: domain.json
src/path_to_academia/data/examples/ml-bio/raw/: source_records.csv
src/path_to_academia/data/examples/ml-bio/tables/: positions_current.csv
src/path_to_academia/webui/static/: app.js  i18n.json  styles.css
tests/: test_cli.py  test_public_surface.py  test_web.py  test_workspace.py  test_xlsx.py
